--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -42,6 +42,7 @@ training:
   warm_start:      true        # Enable warm-start                           (common in finance live rolls)
   warm_training_epochs: 5      # Light fine-tune epochs
   retrain_delta:   30B         # Retrain every (30 * freq) bars
+  save_backups: false          # whether to save backups during walk-forward
 
 
 
