--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ pandas
 torch
 mlflow>=2.10.0
 scikit-learn>=1.3.0
-pandas_market_calendars
+pandas_market_calendars==5.1.1
+pytest==8.4.1
+autogen==0.9.9
+PyPDF2==3.0.1
